Continuing effort to make elements appear the same on all browsers.

--- a/gradients-and-shadows/index.html
+++ b/gradients-and-shadows/index.html
@@ -5,25 +5,33 @@
     <h1>Rocket League Habits</h1>
 
     <div class="container" id="container-1">
-        <div class="card" id="card-1">
-            <h2>Better Communication</h2>
-            <p>Lots of ideas about better communication.  Like, communicate better.  And more often.  Other ideas too.</p>
-            <button id="card-1-button">Learn More</button>
+        <div class="card-container" id="card-container-1">
+            <div class="card" id="card-1">
+                <h2>Better Communication</h2>
+                <p>Lots of ideas about better communication.  Like, communicate better.  And more often.  Other ideas too.</p>
+                <button id="card-1-button">Learn More</button>
+            </div>
         </div>
-        <div class="card" id="card-2">
-            <h2>More Practice</h2>
-            <p>Lots of ideas about better practicing.  Like, practicing better.  And more often.  Other ideas too.</p>
-            <button id="card-2-button">Learn More</button>
+        <div class="card-container" id="card-container-2">
+            <div class="card" id="card-2">
+                <h2>More Practice</h2>
+                <p>Lots of ideas about better practicing.  Like, practicing better.  And more often.  Other ideas too.</p>
+                <button id="card-2-button">Learn More</button>
+            </div>
         </div>
-        <div class="card" id="card-3">
-            <h2>Improve Rotation</h2>
-            <p>Lots of ideas about improving rotation.  Like, rotate better.  And more often.  Other ideas too.</p>
-            <button id="card-3-button">Learn More</button>
+        <div class="card-container" id="card-container-3">
+            <div class="card" id="card-3">
+                <h2>Improve Rotation</h2>
+                <p>Lots of ideas about improving rotation.  Like, rotate better.  And more often.  Other ideas too.</p>
+                <button id="card-3-button">Learn More</button>
+            </div>
         </div>
-        <div class="card" id="card-4">
-            <h2>Find a Teammate</h2>
-            <p>Lots of ideas about better passing.  Like, pass better.  And more.  Other ideas too.</p>
-            <button id="card-4-button">Learn More</button>
+        <div class="card-container" id="card-container-4">
+            <div class="card" id="card-4">
+                <h2>Find a Teammate</h2>
+                <p>Lots of ideas about better passing.  Like, pass better.  And more.  Other ideas too.</p>
+                <button id="card-4-button">Learn More</button>
+            </div>
         </div>
     </div>
     <div class="container" id="container-2">
